--- a/ShoppingCart/src/main/resources/application.properties
+++ b/ShoppingCart/src/main/resources/application.properties
@@ -10,10 +10,11 @@ spring.datasource.initialize=true
 spring.datasource.continue-on-error=true
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.open-in-view=false
 
 
-spring.admin.username = admin
-spring.admin.password = admin
+#spring.admin.username = admin
+#spring.admin.password = admin
 
-spring.thymeleaf.mode = LEGACYHTML5
+spring.thymeleaf.mode = HTML
 spring.thymeleaf.cache=false
